remove unnecessary permission

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "manifest_version": 2,
     "name": "To Google Lens",
     "version": "1.0",
-    "permissions": ["menus", "activeTab", "<all_urls>", "downloads"],
+    "permissions": ["menus", "activeTab", "<all_urls>"],
 
     "description": "Take a screenshot of a webpage and search on Google Lens.",
 
